--- a/views/sample.ejs
+++ b/views/sample.ejs
@@ -1,2 +1,9 @@
-<h1>Sample Controller</h1>
-<h2>Find me at controllers/SampleController.js</h2>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>Sample Controller</h1>
+        <h2>Find me at controllers/SampleController.js</h2>
+    </body>
+</html>
